增加修改时用户属性信息

--- a/autodb/templates/yunwei/xianzhi.html
+++ b/autodb/templates/yunwei/xianzhi.html
@@ -33,28 +33,29 @@
             <input property="editor" class="mini-combobox" style="width:100%;" data="zyGenders"/>
         </div>
 
-        <div field="cj" headerAlign="center">厂家
+        <div field="cj" headerAlign="center" allowSort="true">厂家
             <input property="editor" class="mini-textbox" width="100%"/></div>
-        <div field="sbmc" headerAlign="center">设备名称
+        <div field="sbmc" headerAlign="center" allowSort="true">设备名称
             <input property="editor" class="mini-textbox" width="100%"/></div>
-        <div field="sbxh" headerAlign="center">设备型号
+        <div field="sbxh" headerAlign="center" allowSort="true">设备型号
             <input property="editor" class="mini-textbox" width="100%"/></div>
-        <div field="bkmc" headerAlign="center">板卡名称
+        <div field="bkmc" headerAlign="center" allowSort="true">板卡名称
             <input property="editor" class="mini-textbox" width="100%"/></div>
-        <div field="bkxh" headerAlign="center">板卡型号
+        <div field="bkxh" headerAlign="center" allowSort="true">板卡型号
             <input property="editor" class="mini-textbox" width="100%"/></div>
-        <div type="comboboxcolumn" autoShowPopup="true" field="sbzt" headerAlign="center">设备状态
+        <div type="comboboxcolumn" autoShowPopup="true" field="sbzt" headerAlign="center" allowSort="true">设备状态
             <input property="editor" class="mini-combobox" style="width:100%;" data="sbztGenders"/></div>
 
         <div type="comboboxcolumn" autoShowPopup="true" field="whx" headerAlign="center">完好性
             <input property="editor" class="mini-combobox" style="width:100%;" data="whxGenders"/></div>
 
 
-        <div type="comboboxcolumn" autoShowPopup="true" field="bfzt" headerAlign="center">报废状态
+        <div type="comboboxcolumn" autoShowPopup="true" field="bfzt" headerAlign="center" allowSort="true">报废状态
             <input property="editor" class="mini-combobox" style="width:100%;" data="bfztGenders"/></div>
-        <div type="comboboxcolumn" autoShowPopup="true" field="dyzt" headerAlign="center">调用状态
+        <div type="comboboxcolumn" autoShowPopup="true" field="dyzt" headerAlign="center" allowSort="true">调用状态
             <input property="editor" class="mini-combobox" style="width:100%;" data="dyztGenders"/></div>
-        <div type="comboboxcolumn" autoShowPopup="true" field="zcssbm" headerAlign="center" width="150px">资产所属部门
+        <div type="comboboxcolumn" autoShowPopup="true" field="zcssbm" headerAlign="center" width="150px"
+             allowSort="true">资产所属部门
             <input property="editor" class="mini-combobox" style="width:100%;" data="zcssbmGenders"/></div>
 
         <div field="fzwz" headerAlign="center">放置位置
