增加修改时用户属性信息

--- a/autodb/templates/index.html
+++ b/autodb/templates/index.html
@@ -30,6 +30,8 @@
     .mini-layout-region-south img {
         vertical-align: top;
     }
+
+
 </style>
 
 
@@ -78,10 +80,10 @@
                                 <option value="blue2010">Blue2010</option>
                             </select>
                         </div>
-                        <div >
+                        <div hidden="true" style="display: none">
                             可用角色：{{session['groupid']}}
                         </div>
-                        <div >
+                        <div hidden="true" style="display: none">
                             可用权限：{{session['groupname']}}
                         </div>
                     </div>
