--- a/autodb/templates/base.html
+++ b/autodb/templates/base.html
@@ -15,7 +15,20 @@
     <script src="{{ url_for('static', filename='miniui/boot.js') }}" type="text/javascript"></script>
     <script src="{{ url_for('static', filename='miniui/core.js') }}" type="text/javascript"></script>
 
+<style type="text/css">
+    .description {
+        padding-bottom: 30px;
+        font-family: Verdana;
+    }
 
+    .description h3 {
+        color: #CC0000;
+        font-size: 16px;
+        margin: 0 30px 10px 0px;
+        padding: 45px 0 8px;
+        border-bottom: solid 1px #888;
+    }
+</style>
 </head>
 <body>
 
